# copyair

./: .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  Makefile  QUICKSTART.py  README.md  README_INFERENCE.md  STATUS.txt  WELCOME.py  example_usage.py  main.py  pyproject.toml  requirements.txt  run_control_center.py  setup_project.py  test_api.html
.agent/: NAFNET_CONVNEXT_GUIDE.md  README_INFERENCE.md  WEIGHT_UPDATE_EXPLAINED.md
configs/: params.yaml
docs/: API_INTEGRATION.md  BATCH_INFERENCE.md  CLOUD_ARCHITECTURE.md  GIT_SETUP.md  MIGRATION_TO_TANH.md  PROJECT_SUMMARY.md  SCHEDULERS_GUIDE.md
examples/: tutorial.py
frontend/: README.md  index.html  package-lock.json  package.json  server.py
frontend/src/: App.css  App.tsx  index.css
notebooks/: aging_geometric_audit.ipynb  dinov3_latent.py  dinov3_sequence.py  explore_lpips.py  grafico_pca3d.html
scripts/: batch_inference.py  check_checkpoint.py  check_data.py  convert_checkpoint.py  hyperparam_search.py  list_mlflow_models.py  predict.py  train.py  verify_aging_audit.py  verify_models.py
src/: __init__.py
src/api/: job_manager.py  main.py
src/data/: __init__.py  augmentations.py  dataset.py
src/models/: __init__.py  architectures.py  basic_unet.py  blocks.py  convnext.py  discriminator.py  factory.py  losses.py  mambair.py  modernUnet.py  modern_unet.py  nafnet.py  residual_unet.py  scope_unet.py  smartunet.py  swin_unet.py  unet.py
src/training/: __init__.py  inference.py  train.py  (+2 more)
tests/: __init__.py  test_dataset.py  test_factory.py  test_models.py  test_unet_forward.py  verify_swin.py
(+15 files in other folders)
